Replaced pipenv with virtualenv and updated the chat app

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- chat/templates/chat/room.html -->
 <!DOCTYPE html>
 <html>
@@ -8,14 +9,17 @@
 <body>
 <textarea id="chat_log" readonly cols="100" rows="20"></textarea><br />
 <input type="text" id="chat_message_input" title="Type your message" size="100" /><br />
-<input type="button" id="chat_message_submit" value="Send" />
+<input type="button" id="chat_message_submit" value="Send as {{ user }}" />
+<audio src="{% static 'chat_message.wav' %}" id="message_sound"></audio>
+
 {{ room_name|json_script:"room_name" }}
 <script>
 const roomName = JSON.parse(document.getElementById('room_name').textContent);
 const chatSocket = new WebSocket('ws://' + window.location.host + '/ws/chat/' + roomName + '/');
 chatSocket.onmessage = function(e) {
 const data = JSON.parse(e.data);
-document.querySelector('#chat_log').value += (data.message + '\n');
+document.querySelector('#chat_log').value += (data.user + ': ' + data.message + '\n');
+document.querySelector('#message_sound').play();
 };
 chatSocket.onclose = function(e) {
 console.error('Chat socket closed unexpectedly. ');
@@ -29,7 +33,7 @@ document.querySelector('#chat_message_submit').click();
 document.querySelector('#chat_message_submit').onclick = function(e) {
 const messageInputDom = document.querySelector('#chat_message_input');
 const message = messageInputDom.value;
-chatSocket.send(JSON.stringify({'message': message}));
+chatSocket.send(JSON.stringify({'user': '{{ user }}', 'message': message}));
 messageInputDom.value = '';
 };
 </script>
